Bug 110422 - AMD_DEBUG=forcedma will crash OpenGL aps with SIGFAULT on VegaM 8706G
Summary: AMD_DEBUG=forcedma will crash OpenGL aps with SIGFAULT on VegaM 8706G
Status: RESOLVED FIXED
Alias: None
Product: Mesa
Classification: Unclassified
Component: Drivers/Gallium/radeonsi (show other bugs)
Version: git
Hardware: Other All
: medium normal
Assignee: Default DRI bug account
QA Contact: Default DRI bug account
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2019-04-14 16:01 UTC by Dimitar Atanasov
Modified: 2019-06-04 15:00 UTC (History)
0 users

See Also:
i915 platform:
i915 features:


Attachments
Unigen Heaven same command (5.33 KB, text/plain)
2019-04-14 16:01 UTC, Dimitar Atanasov
Details

Description Dimitar Atanasov 2019-04-14 16:01:12 UTC
Created attachment 143966 [details]
Unigen Heaven same command

DRI_PRIME=1 AMD_DEBUG=forcedma glxinfo

[26320.370012] amdgpu 0000:01:00.0: GPU pci config reset
[26332.450816] [drm] PCIE GART of 256M enabled (table at 0x000000F400000000).
[26332.574698] [drm] UVD and UVD ENC initialized successfully.
[26332.684628] [drm] VCE initialized successfully.
[26332.747280] glxinfo[28470]: segfault at 0 ip 0000000000000000 sp 00007fff9ef92e08 error 14 in glxinfo[56271c220000+c000]
[26332.747284] Code: Bad RIP value.

but same command with glxgears work correct.
Unigen will crash also
Comment 1 Pierre-Eric Pelloux-Prayer 2019-06-03 19:12:15 UTC
Should be fixed on master by https://gitlab.freedesktop.org/mesa/mesa/commit/4583f09caa5aef719a1eec282f24a86c789cbba6.

Can you test and confirm?
Comment 2 Dieter Nützel 2019-06-04 00:31:24 UTC
(In reply to Pierre-Eric Pelloux-Prayer from comment #1)
> Should be fixed on master by
> https://gitlab.freedesktop.org/mesa/mesa/commit/
> 4583f09caa5aef719a1eec282f24a86c789cbba6.
> 
> Can you test and confirm?

Hello Pierre-Eric,

I can confirm with Polaris 20 (RX580) running Unigine_Heaven-4.0 with

SOURCE/Unigine_Heaven-4.0> echo $AMD_DEBUG 
sisched,nir,forcedma
SOURCE/Unigine_Heaven-4.0> echo $R600_DEBUG 
sisched,nir,forcedma

sigfaulted for me before, too.
Could be closed after Dimitar confirmed, too.

BTW Are you one of the 'new' AMD OSS guys?
Comment 3 Dimitar Atanasov 2019-06-04 09:11:52 UTC
Working correct now with Vega M. Please close.


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.